add root layout template

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 
-    <title>Calculadora</title>
+    <title>Calculadora de tinta</title>
   </head>
   <body>
     <div id="root"></div>
